@@ -4,41 +4,51 @@ import backend_one_tech.dto.user.UserDTO;
 import backend_one_tech.dto.user.userDTOs.UserCreateDTO;
 import backend_one_tech.dto.user.userDTOs.UserUpdateDTO;
 import backend_one_tech.exceptions.UserNotFoundException;
-import backend_one_tech.model.User.User;
-import backend_one_tech.model.User.UserRole;
+import backend_one_tech.model.user.Role;
+import backend_one_tech.model.user.User;
+import backend_one_tech.repository.RoleRepository;
 import backend_one_tech.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
+    @Autowired
     private final UserRepository userRepository;
+
+    @Autowired
+    private final RoleRepository roleRepository;
+
+    @Autowired
+    private final PasswordEncoder passwordEncoder;
 
     @Override
     public List<UserDTO> findAll() {
         return userRepository.findAll()
                 .stream()
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public UserDTO findById(Long id) {
-        User user = (User) userRepository.findById(id)
+        User user = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException(id));
-
         return toDTO(user);
     }
 
     @Override
     public UserDTO findByEmail(String email) {
-        User user = (User) userRepository.findByEmail(email)
+        User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UserNotFoundException(email));
-
         return toDTO(user);
     }
 
@@ -46,30 +56,42 @@ public class UserServiceImpl implements UserService {
     public UserDTO findByRun(String run) {
         User user = userRepository.findByRun(run)
                 .orElseThrow(() -> new UserNotFoundException("RUN: " + run));
-
         return toDTO(user);
     }
 
     @Override
+    @Transactional
     public UserDTO createUser(UserCreateDTO dto) {
+
+        if (userRepository.existsByEmail(dto.getEmail())) {
+            throw new RuntimeException("Email already in use");
+        }
+        if (userRepository.existsByRun(dto.getRun())) {
+            throw new RuntimeException("RUN already in use");
+        }
 
         User user = new User();
         user.setRun(dto.getRun());
         user.setNombre(dto.getNombre());
         user.setApellidos(dto.getApellidos());
         user.setEmail(dto.getEmail());
-        user.setPassword(dto.getPassword()); // sin encoder por ahora
+        user.setPassword(passwordEncoder.encode(dto.getPassword()));
         user.setFechaNacimiento(dto.getFechaNacimiento());
         user.setDireccion(dto.getDireccion());
         user.setRegion(dto.getRegion());
         user.setComuna(dto.getComuna());
-        user.setRol(UserRole.CLIENTE);
+
+        Role defaultRole = roleRepository.findByName("ROLE_USER")
+                .orElseThrow(() -> new RuntimeException("El rol ROLE_USER no existe"));
+        user.getRoles().clear();
+        user.getRoles().add(defaultRole);
 
         User saved = userRepository.save(user);
         return toDTO(saved);
     }
 
     @Override
+    @Transactional
     public UserDTO updateUser(Long id, UserUpdateDTO dto) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new UserNotFoundException(id));
@@ -80,8 +102,7 @@ public class UserServiceImpl implements UserService {
         user.setRegion(dto.getRegion());
         user.setComuna(dto.getComuna());
 
-        User updated;
-        updated = userRepository.save(user);
+        User updated = userRepository.save(user);
         return toDTO(updated);
     }
 
@@ -111,9 +132,47 @@ public class UserServiceImpl implements UserService {
         dto.setDireccion(user.getDireccion());
         dto.setRegion(user.getRegion());
         dto.setComuna(user.getComuna());
-        dto.setRol(user.getRol());
         dto.setPuntosLevelUp(user.getPuntosLevelUp());
         dto.setCodigoReferido(user.getCodigoReferido());
+        dto.setRoles(user.getRoles().stream()
+                .map(Role::getName)
+                .collect(Collectors.toList()));
         return dto;
     }
+
+    @Override
+    @Transactional
+    public User createUserEntityForAuth(UserCreateDTO dto) {
+        if (userRepository.existsByEmail(dto.getEmail())) {
+            throw new RuntimeException("Email already in use");
+        }
+        if (userRepository.existsByRun(dto.getRun())) {
+            throw new RuntimeException("RUN already in use");
+        }
+
+        User user = new User();
+        user.setRun(dto.getRun());
+        user.setNombre(dto.getNombre());
+        user.setApellidos(dto.getApellidos());
+        user.setEmail(dto.getEmail());
+        user.setPassword(passwordEncoder.encode(dto.getPassword()));
+        user.setFechaNacimiento(dto.getFechaNacimiento());
+        user.setDireccion(dto.getDireccion());
+        user.setRegion(dto.getRegion());
+        user.setComuna(dto.getComuna());
+
+        Role defaultRole = roleRepository.findByName("ROLE_USER")
+                .orElseThrow(() -> new RuntimeException("Rol ROLE_USER no existe"));
+
+        user.getRoles().clear();
+        user.getRoles().add(defaultRole);
+
+        return userRepository.save(user);
+    }
+
+    @Override
+    public boolean matchesPassword(String raw, String encoded) {
+        return passwordEncoder.matches(raw, encoded);
+    }
+
 }
